--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-env": "^7.16.11",
     "babel-jest": "^28.0.2",
     "css-loader": "^6.7.1",
+    "file-loader": "^6.2.0",
     "jest": "^28.0.2",
     "style-loader": "^3.3.1",
     "webpack": "^5.72.0",
@@ -46,5 +47,8 @@
       "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js",
       "^config$": "<rootDir>/configs/app-config.js"
     }
+  },
+  "dependencies": {
+    "@beyonk/google-fonts-webpack-plugin": "^1.7.0"
   }
 }
